# startgit

./: .clang-format  .clang-tidy  .codespellrc  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: arguments.cpp  arguments.hpp  branch.cpp  branch.hpp  commit.cpp  commit.hpp  common.cpp  common.hpp  diff.cpp  diff.hpp  document.cpp  document.hpp  file.cpp  file.hpp  html.cpp  html.hpp  lib.cpp  main.cpp  repository.cpp  repository.hpp  startgit-index.cpp  startgit.cpp  tag.cpp  tag.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/source/: startgit_test.cpp
